# cytomancer

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
components/worker/: Dockerfile  entrypoint.sh
cytomancer/: __init__.py  celery.py  cli.py  click_utils.py  config.py  config_click.py  dask.py  enumero.py  experiment.py  updater.py  utils.py
cytomancer/cvat/: backup.py  click.py  colocalize.py  export.py  helpers.py  legacy_survival.py  measure.py  nuc_cyto.py  nuc_cyto_legacy.py  restore.py  survival.py  upload.py
cytomancer/fiftyone/: click.py  import_survival.py  ingest.py  zhuzh.py
cytomancer/io/: click.py  cq1_loader.py  cyto_dir.py  datasets.py  dump.py  ioutils.py  legacy_loader.py  lux_loader.py  nd2_loader.py  utils.py
cytomancer/models/: click.py  neurite_quant.py  stardist_seg.py  unet.py
cytomancer/models/unet/: dice.py  predict.py  train.py  unet.py
cytomancer/oneoffs/: click.py  ilastish_seg_model.py  stardist_seg_cvat_proj.py  tasks.py
cytomancer/ops/: display.py
cytomancer/quant/: click.py  neurite_quant.py  neurite_seg.py  pultra_classifier.py  pultra_survival.py  stardist_nuc_seg.py  stardist_seg.py  tasks.py
cytomancer/tests/cvat/: integration_test_nuc_cyto.py  test_helpers.py
scripts/: setup.sh
tests/cvat/: integration_test_nuc_cyto.py
